--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,8 +64,10 @@
     <Compile Include="Assets\scripts\Flash.cs" />
     <Compile Include="Assets\scripts\GameStart.cs" />
     <Compile Include="Assets\scripts\LaneMove.cs" />
+    <Compile Include="Assets\scripts\RendaBarCtrl.cs" />
     <Compile Include="Assets\scripts\ResultAnim.cs" />
     <Compile Include="Assets\scripts\SceneMove.cs" />
+    <Compile Include="Assets\scripts\SizeChange.cs" />
     <Compile Include="Assets\scripts\Timer.cs" />
     <Compile Include="Assets\scripts\TypeObject.cs" />
     <Compile Include="Assets\scripts\TypingSystem.cs" />
