リザルトの表示

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\scripts\Dictionary.cs" />
+    <Compile Include="Assets\scripts\DispMissType.cs" />
+    <Compile Include="Assets\scripts\DispTypeNum.cs" />
+    <Compile Include="Assets\scripts\DispTypeSpeed.cs" />
     <Compile Include="Assets\scripts\Flash.cs" />
     <Compile Include="Assets\scripts\GameStart.cs" />
     <Compile Include="Assets\scripts\LaneMove.cs" />
